// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component > should match snapshot - danger variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none h-10 px-4 text-sm"
>
  Delete
</button>
`;

exports[`Button Component > should match snapshot - disabled state 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-blue-600 text-white hover:bg-blue-700 focus-visible:ring-blue-500 h-10 px-4 text-sm"
  disabled=""
>
  Disabled
</button>
`;

exports[`Button Component > should match snapshot - full width 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-blue-600 text-white hover:bg-blue-700 focus-visible:ring-blue-500 h-10 px-4 text-sm w-full"
>
  Full Width
</button>
`;

exports[`Button Component > should match snapshot - ghost variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none text-gray-700 hover:bg-gray-100 focus-visible:ring-gray-300 h-10 px-4 text-sm"
>
  Click me
</button>
`;

exports[`Button Component > should match snapshot - large size 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-blue-600 text-white hover:bg-blue-700 focus-visible:ring-blue-500 h-12 px-6 text-base"
>
  Large
</button>
`;

exports[`Button Component > should match snapshot - loading state 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-blue-600 text-white hover:bg-blue-700 focus-visible:ring-blue-500 h-10 px-4 text-sm"
  disabled=""
>
  <svg
    class="animate-spin -ml-1 mr-2 h-4 w-4 text-current"
    fill="none"
    viewBox="0 0 24 24"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
  Loading
</button>
`;

exports[`Button Component > should match snapshot - outline variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus-visible:ring-gray-300 h-10 px-4 text-sm"
>
  Click me
</button>
`;

exports[`Button Component > should match snapshot - primary variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-blue-600 text-white hover:bg-blue-700 focus-visible:ring-blue-500 h-10 px-4 text-sm"
>
  Click me
</button>
`;

exports[`Button Component > should match snapshot - secondary variant 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-gray-100 text-gray-900 hover:bg-gray-200 focus-visible:ring-gray-300 h-10 px-4 text-sm"
>
  Click me
</button>
`;

exports[`Button Component > should match snapshot - small size 1`] = `
<button
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-blue-600 text-white hover:bg-blue-700 focus-visible:ring-blue-500 h-8 px-3 text-sm"
>
  Small
</button>
`;
